<resources>
    <!-- Generated by Automatic String Resource Translation
--><!--          https://asrt.gluege.boerde.de            
--><string name="app_name">City of Culture</string>
    <string name="loading">Loading ...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="intro">Presentation</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="visit">Visit the city</string>
    <string name="contact">Contact Us</string>
    <string name="gallery">Gallery</string>
    <string name="banner">City of Culture - Tunis</string>
    <string name="please_wait">Please wait</string>
    <string name="share">Share</string>
    <string name="addToCal">Add to Calendar</string>
    <string name="details">Details</string>
    <string name="share_via">Share via</string>
    <string name="subject">Topic</string>
    <string name="content">contents</string>
    <string name="send">To send</string>
    <string name="hint1">Please choose the Email Client :</string>
    <string name="info">Address: Avenue Mohamed 5, Tunis\nTelephone: 70 028 330</string>
    <string name="hint3">Send an email</string>
    <string name="chkinternet">Check your internet connection and try again.</string>
    <string name="hint"><![CDATA[<font color=\"#ffffff\">Please fill in all fields.</font>]]></string>
    <string name="hintcnx"><![CDATA[<font color=\"#ffffff\">Check your internet connection and try again.<</font>]]></string>
    <string name="o">OK</string>
    <string name="err">Fault</string>
<!-- Generated by Automatic String Resource Translation
--><!--          https://asrt.gluege.boerde.de            
--></resources>