<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:checkableBehavior="single" android:id="@+id/group_feature1">
            <item
                android:id="@+id/nav_intro"
                android:icon="@drawable/ic_intro"
                android:title="@string/intro" />
        </group>
        <group android:checkableBehavior="single" android:id="@+id/group_feature2">
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_news"
                android:title="@string/news" />
            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_events"
                android:title="@string/events" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/gallery" />
        </group>
        <group android:checkableBehavior="single" android:id="@+id/group_feature3">
            <item
                android:id="@+id/nav_gps"
                android:icon="@drawable/ic_map"
                android:title="@string/visit" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />
        </group>
    </group>


</menu>
