<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.contact_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_margin="4dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_margin="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"/>
            </LinearLayout>

            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint3"/>

            <EditText
                android:layout_margin="4dp"
                android:hint="@string/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subject"
                android:maxLines="2"/>
            <EditText
                android:layout_margin="4dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:hint="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contentMail"/>

            <Button
                style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/send"
                android:id="@+id/sendBtn"
                android:textColor="@color/actionbar_text" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>